<resources>
    <string name="app_name">eStore(OPN)</string>
    <string name="title_store">eStore</string>
    <string name="title_order_summary">Order Summary</string>
    <string name="title_order_success">Order Success</string>

    <string name="place_order">Confirm order</string>
    <string name="btn_add_text">ADD</string>
    <string name="btn_dismiss_text">Dismiss</string>
    <string name="store_label">Stores</string>
    <string name="product_label">Products</string>
    <string name="store_open_time">Opening time: %1$s</string>
    <string name="store_close_time">Closing time %1$s</string>
    <string name="product_price">฿%1$d</string>
    <string name="cart_product_qty">Quantity: x%1$d</string>
    <string name="cart_total_price">Total price: ฿%1$d</string>
    <string name="enter_address">Enter address here</string>
    <string name="error_enter_address">Please enter your address</string>

    <string name="empty_cart">No product in your cart</string>
    <string name="loading_text_1">Loading</string>
    <string name="loading_text_2">Placing your order</string>

    <string name="order_success">Order Successful</string>
    <string name="order_failed">Order Failed</string>

    <string name="error_products">Error occurred while loading Products </string>
    <string name="error_store">Error occurred while loading Store </string>
</resources>