<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.saiful.opn_estore.ui.order_summary.OrderSummaryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.store.StoreFragment">

        <TextView
            android:id="@+id/empty_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_cart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="?attr/textAppearanceHeadline6"
            tools:text="Dismiss"
            android:visibility="@{vm.cartProductList.size()>0? View.GONE: View.VISIBLE}"/>

        <Button
            android:id="@+id/dismiss_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/empty_cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/btn_dismiss_text"
            android:visibility="@{vm.cartProductList.size()>0? View.GONE: View.VISIBLE}"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{vm.cartProductList.size()>0? View.VISIBLE: View.GONE}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/product_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/padding_medium"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:text="@string/product_label"
                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:text="Products" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cart_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/padding_extra_small"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:setCartItems="@{vm.cartProductList}"
                    app:spanCount="2"
                    tools:listitem="@layout/list_item_product" />


                <TextView
                    android:id="@+id/total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="@dimen/padding_medium"
                    android:text="@{@string/cart_total_price(vm.totalPrice)}"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    tools:text="Total price is: B14224" />


                <EditText
                    android:id="@+id/editTextPostalAddress"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:layout_marginHorizontal="@dimen/padding_medium"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:background="@drawable/address_background"
                    android:text="@{vm.address}"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/enter_address"
                    android:inputType="textMultiLine"
                    android:padding="@dimen/padding_small"
                    android:onTextChanged="@{(text, start, before, count) ->  vm.onAddressTextChanged(text)}"/>

                <Button
                    android:id="@+id/place_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/padding_medium"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:onClickListener="@{()->vm.confirmOrder()}"
                    android:text="@string/place_order" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>