<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.saiful.opn_estore.ui.store.StoreViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.store.StoreFragment">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/store_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/padding_medium"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:text="@string/store_label"
                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:text="Stores" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/store_info_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/padding_medium"
                    android:layout_marginTop="@dimen/padding_extra_small"
                    android:padding="4dp"
                    android:visibility="@{vm.storeInfo==null?View.GONE:View.VISIBLE}"
                    app:cardCornerRadius="4dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/store_card_background"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="8dp">

                        <TextView
                            android:id="@+id/store_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@{vm.storeInfo.name}"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="@color/store_card_text"
                            app:layout_constraintEnd_toStartOf="@+id/store_star"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Coffee Store" />

                        <TextView
                            android:id="@+id/store_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{vm.storeInfo.rating.toString()}"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="@color/store_card_text"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="4.5" />

                        <ImageView
                            android:id="@+id/store_star"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            app:layout_constraintBottom_toBottomOf="@+id/store_rating"
                            app:layout_constraintEnd_toStartOf="@+id/store_rating"
                            app:layout_constraintTop_toTopOf="@+id/store_rating"
                            app:srcCompat="@drawable/ic_baseline_star_24" />


                        <TextView
                            android:id="@+id/store_open"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{@string/store_open_time(vm.storeInfo.openingTime)}"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/store_card_sub_text"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/store_title"
                            tools:text="Opening time: 10:00" />

                        <TextView
                            android:id="@+id/store_close"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{@string/store_close_time(vm.storeInfo.closingTime)}"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/store_card_sub_text"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/store_open"
                            tools:text="Closing time: 10:00" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/product_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/padding_medium"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:text="@string/product_label"
                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:text="Products" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/parent_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/padding_extra_small"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:setItems="@{vm.productList}"
                    app:spanCount="2"
                    tools:listitem="@layout/list_item_store" />

                <Button
                    android:id="@+id/go_to_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/padding_medium"
                    android:layout_marginVertical="@dimen/padding_small"
                    android:text="@string/title_order_summary" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>